# qtop

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  ROADMAP.rst  Vagrantfile  Vagrantfile.dockerhost  colormap.py  common_module.py  constants.py  fileutils.py  helpfile.txt  oar.py  pbs.py  plugin_oar.py  plugin_pbs.py  plugin_sge.py  pyproject.toml  qtop  qtop.colormap  qtop.conf  qtop.py  qtopconf.yaml  readpbsyaml.py  readstates.py  serialiser.py  setup.py  sge.py  stat_maker.py  utils.py  variables.py  (+2 more)
.github/workflows/: build.yml  pytest.yml
contrib/: func_tests.sh  oar1_dvv_out.ref  oarnodes_Y.txt  oarnodes_s_Y.txt  pbs_dvv_out.ref  pbsnodes_a.txt  qstat.F.xml.stdout  qstat_q.txt  sger_dvv_out.ref
docs/: documentation.md  documentation.rst
inputs/: joboutputs.sh  jobstatuses.sh  jobsubmits.sh  qtop-input.sh
legacy/: counter.py  namedtuple.py  ordereddict.py
plugins/: __init__.py  demo.py  oar.py  pbs.py  sge.py
qtop/: fileutils.py  qtop.py
qtop/contrib/: qstat.txt
qtop/inputs/: jobsubmits.sh
qtop/plugins/: demo.py  oar.py
qtop_py/: MatrixProcessor.py  WNOccupancy.py  __init__.py  cli.py  colormap.py  constants.py  fileutils.py  qtop.py  serialiser.py  utils.py  web.py  yaml_parser.py
qtop_py/contrib/: func_tests.sh  oar1_dvv_out.ref  pbs_dvv_out.ref  sger_dvv_out.ref  (+1 more)
source/: colormap.py  fileutils.py  qtop.py  qtopconf.yaml  utils.py
tests/: test_qtop.py  test_viewport.py  test_yaml_parser.py
ui/: viewport.py
(+17 files in other folders)
